# ESP32-TUX

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  activate.bat  activate.sh  build.bat  build.sh  config.bat  config.sh  deploy.bat  deploy.sh  install_idf.bat  menuconfig.sh  monitor.sh  partitions.csv  platformio.ini  sdkconfig  sdkconfig.defaults  sdkconfig.defaults.esp32s3  sdkconfig.lilygo-t-display-s3  sdkconfig.m5stack-core2  sdkconfig.m5stack-cores3  sdkconfig.sunton-8048S070  weather.json  webserver.py
.github/: FUNDING.yml
boards/: esp32-sunton.json
components/ConfigBase/: readme.txt
components/ConfigHelper/: CMakeLists.txt  ConfigHelper.cpp  ConfigHelper.hpp
components/OpenWeatherMap/: CMakeLists.txt  OpenWeatherMap.cpp
components/OpenWeatherMap/include/: OpenWeatherMap.hpp
components/SettingsConfig/: CMakeLists.txt  SettingsConfig.cpp  SettingsConfig.hpp
components/SettingsConfig/include/: SettingsConfig.hpp
components/WeatherConfig/: CMakeLists.txt  WeatherConfig.cpp  WeatherConfig.hpp  readme.txt
components/ota/: CMakeLists.txt  ota.c  ota.h
fatfs/: readme.txt
fatfs/weather/: weather.json
main/: CMakeLists.txt  Kconfig.projbuild  conf_FeatherS3_ILI9341.h  conf_ProS3_ST7735S.h  conf_TinyS3_ST7789.h  conf_WT32SCO1-Plus.h  conf_WT32SCO1.h  gui.hpp  helper_display.hpp  helper_storage.hpp  idf_component.yml  lv_conf.h  main.cpp  main.hpp  page_settings.hpp  wifi_sta.c
main/apps/remote/: readme.txt
main/apps/weather/: readme.txt  weathericons.h
main/devices/: conf_AUTODETECT.h  conf_ESP32_ILI9341.h  conf_LILYGO_T_DISPLAY_S3_CAP.h  conf_Makerfabs_S3_PTFT.h  conf_Makerfabs_S3_STFT.h  conf_Sunton_8048S070.h  conf_WT32SCO1-Plus.h  conf_WT32SCO1.h
main/events/: gui_events.hpp  tux_events.hpp
main/fonts/: font_7seg_56.c  font_7seg_58.c  font_7seg_60.c  font_7seg_64.c  font_fa_14.c  font_fa_weather_32.c  font_fa_weather_42.c  font_fa_weather_48.c  font_fa_weather_56.c  font_fa_weather_64.c  font_robotomono_12.c  font_robotomono_13.c  readme.txt
main/helpers/: helper_display.hpp  helper_fatfs.hpp  helper_lv_fs.hpp  helper_sntp.hpp  helper_spiff.hpp  helper_storage.hpp  helper_storage_shared.hpp  wifi_prov_mgr.hpp
main/images/: dev_bg.c  tux_logo.c  weather_clear_day.c  weather_clear_night.c  weather_cloudy_snowing.c
main/pages/: page_ble_config.hpp  page_settings.hpp  page_wifi_config.hpp
main/widgets/: lv_panel copy.c  lv_panel.c  lv_panel.h  tux_panel.c  tux_panel.h
os_drivers/WT32-SCO/MacOSX/: FTDIUSBSerial.pkg  readme
os_drivers/WT32-SCO/Windows/: readme
partitions/: partition-4MB.csv  partition4MB.csv
server_certs/: ca_cert.pem  ca_key.pem  owm_cert.pem
tmp/: sdkconfig.defaults.esp32
